add tipado dinamico

--- a/src/content/docs/novedades.mdx
+++ b/src/content/docs/novedades.mdx
@@ -2,6 +2,24 @@
 title: Features
 description: A list containing all of this theme's features.
 ---
+<FileTree>
+
+- node_modules/
+- public/
+- src/
+  - assets/
+  - components/
+  - content/
+  - icons/
+  - schemas/
+  - styles/
+    - **theme.css**
+    - ...
+  - ...
+- ...
+
+</FileTree>
+
 
 ## All basic features supported...
 
