--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -12,7 +12,7 @@ hero:
       icon: right-arrow
       variant: primary
     - text: Empieza a aprender
-      link: /aprende/introduccion
+      link: /intro/
       icon: pencil
 ---
 
