--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -3,7 +3,7 @@ title: Aprende JavaScript
 description: Aprende JavaScript de una forma rápida y sencilla.
 tableOfContents: false
 hero:
-  tagline: Congrats on setting up a new Starlight project!
+  tagline: El JS es un lenguaje de secuencias de comandos que te permite crear contenido de actualización dinámica, controlar multimedia, animar imágenes y prácticamente todo lo demás
   image:
     file: ../../assets/logo.png
   actions:
@@ -24,13 +24,7 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 	<Card title="Aprende a usar las variables" icon="pencil">
 		Como usar variables, que tipos existen etc.
 	</Card>
-	<Card title="Add new content" icon="add-document">
-		Add Markdown or MDX files to `src/content/docs` to create new pages.
-	</Card>
-	<Card title="Configure your site" icon="setting">
-		Edit your `sidebar` and other config in `astro.config.mjs`.
-	</Card>
-	<Card title="Read the docs" icon="open-book">
-		Learn more in [the Starlight Docs](https://starlight.astro.build/).
+	<Card title="Operadores" icon="add-document">
+		Aprende a como usar a los operadores.
 	</Card>
 </CardGrid>
