add do while and more

--- a/src/content/docs/404.mdx
+++ b/src/content/docs/404.mdx
@@ -1,9 +1,9 @@
 ---
-title: "404"
-description: Page Not Found.
+title: "Error 404"
+description: Página no encontrada.
 tableOfContents: false
 hero:
-  tagline: We couldn't find this page. Check the URL, Sidebar or try using the search bar.
+  tagline: No pudimos encontrar esta página. Revisa la URL, la barra lateral o intenta usar la barra de búsqueda.
 prev: false
 next: false
 pagefind: false
