--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,27 +1,27 @@
 ---
 title: Aprende JavaScript
-description: Aprende JavaScript de una forma rápida y sencilla.
+description: Curso para aprender paso a paso JavaScript. 100% gratis y práctico. Desde cero.
 tableOfContents: false
 hero:
-  tagline: El JS es un lenguaje de secuencias de comandos que te permite crear contenido de actualización dinámica, controlar multimedia, animar imágenes y prácticamente todo lo demás
+  tagline: Curso para aprender paso a paso JavaScript. 100% gratis y práctico. Desde cero.
   image:
     file: ../../assets/logo.png
   actions:
-    - text: Novedades
-      link: /novedades/
-      icon: right-arrow
-      variant: primary
     - text: Empieza a aprender
       link: /intro/
       icon: pencil
+      variant: primary
+    - text: Ver Github 
+      link: https://github.com/Broslunas/broslunas-aprendejs/
+      icon: github
 ---
 import { Card, CardGrid } from '@astrojs/starlight/components';
 
 ## Qué vas a aprender
 
 <CardGrid stagger>
-	<Card title="Aprende a usar las variables" icon="pencil">
-		Como usar variables, que tipos existen etc.
+	<Card title="Introducción">
+		Arrancamos con JavaScript. Su definición, historia y características.
 	</Card>
 	<Card title="Operadores" icon="add-document">
 		Aprende a como usar a los operadores.
