--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -8,7 +8,7 @@ hero:
     file: ../../assets/logo.png
   actions:
     - text: Empieza a aprender
-      link: /intro/
+      link: /introduccion/01-que-es-javascript/
       icon: pencil
       variant: primary
     - text: Ver Github 
@@ -22,8 +22,5 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 <CardGrid stagger>
 	<Card title="Introducción">
 		Arrancamos con JavaScript. Su definición, historia y características.
-	</Card>
-	<Card title="Operadores" icon="add-document">
-		Aprende a como usar a los operadores.
 	</Card>
 </CardGrid>
