--- a/src/content/docs/en/index.mdx
+++ b/src/content/docs/en/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Aprende JavaScript
+title: Learn JavaScript
 description: Step-by-step course to learn JavaScript. 100% free and practical. From scratch.
 tableOfContents: false
 hero:
