--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -14,13 +14,29 @@ hero:
     - text: Ver Github 
       link: https://github.com/Broslunas/broslunas-aprendejs/
       icon: github
+editUrl: false
 ---
 import { Card, CardGrid } from '@astrojs/starlight/components';
-
-## Qué vas a aprender
+import { Tabs, TabItem } from '@astrojs/starlight/components';
 
 <CardGrid stagger>
-	<Card title="Introducción">
-		Arrancamos con JavaScript. Su definición, historia y características.
+	<Card title="Introduccion" icon="open-book">
+    Arrancamos con JavaScript. Su definición, historia y características.
 	</Card>
+  <Card title="Estructuras de control" icon="bars">
+    Controla el flujo de ejecución de tu programa con condicionales y bucles
+  </Card>
 </CardGrid>
+
+<Tabs>
+  <TabItem label="Introduccion" icon="open-book">
+    Arrancamos con JavaScript. Su definición, historia y características.
+
+    En esta seccion tendremos diferentes clases que nos introduciran al mundo de JavaScript.
+  </TabItem>
+  <TabItem label="Estructuras de control" icon="bars">
+    Controla el flujo de ejecución de tu programa con condicionales y bucles
+
+    En esta seccion aprenderás, como usar los condionales if, else y otros más. Adémas aprenderas a como utilizar los bucles mas sencillos entre otras cosas.
+  </TabItem>
+</Tabs>
