--- a/src/content/docs/en/index.mdx
+++ b/src/content/docs/en/index.mdx
@@ -14,6 +14,7 @@ hero:
     - text: See on Github 
       link: https://github.com/Broslunas/broslunas-aprendejs/
       icon: github
+editUrl: false
 ---
 import { Card, CardGrid } from '@astrojs/starlight/components';
 
@@ -23,4 +24,7 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 	<Card title="Introducction">
 		Let's start with JavaScript. Its definition, history and characteristics.
 	</Card>
+  <Card title="Control structures">
+    Control the flow of your program's execution with conditionals and loops
+  </Card>
 </CardGrid>
