--- a/src/content/docs/en/index.mdx
+++ b/src/content/docs/en/index.mdx
@@ -15,6 +15,8 @@ hero:
       link: https://github.com/Broslunas/broslunas-aprendejs/
       icon: github
 editUrl: false
+prev: false
+next: false
 ---
 import { Card, CardGrid } from '@astrojs/starlight/components';
 
