--- a/src/content/docs/en/index.mdx
+++ b/src/content/docs/en/index.mdx
@@ -17,6 +17,8 @@ hero:
 editUrl: false
 prev: false
 next: false
+template: splash
+lastUpdated: false
 ---
 import { Card, CardGrid } from '@astrojs/starlight/components';
 
