--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -9,7 +9,7 @@ hero:
   actions:
     - text: Empieza a aprender
       link: /introduccion/01-que-es-javascript/
-      icon: pencil
+      icon: right-arrow
       variant: primary
     - text: Ver Github 
       link: https://github.com/Broslunas/broslunas-aprendejs/
@@ -17,6 +17,8 @@ hero:
 editUrl: false
 prev: false
 next: false
+template: splash
+lastUpdated: false
 ---
 import { Card, CardGrid } from '@astrojs/starlight/components';
 import { Tabs, TabItem } from '@astrojs/starlight/components';
