--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -14,6 +14,10 @@ hero:
     - text: Ver Github 
       link: https://github.com/Broslunas/broslunas-aprendejs/
       icon: github
+    - text: Inicio 
+      link: https://broslunas.com/
+      icon: laptop
+      variant: primary
 editUrl: false
 prev: false
 next: false
