--- a/src/content/docs/en/index.mdx
+++ b/src/content/docs/en/index.mdx
@@ -11,9 +11,14 @@ hero:
       link: /en/introduccion/01-que-es-javascript/
       icon: pencil
       variant: primary
+    - text: Inicio 
+      link: https://broslunas.com/
+      icon: laptop
+      variant: primary
     - text: See on Github 
       link: https://github.com/Broslunas/broslunas-aprendejs/
       icon: github
+      variant: secondary
 editUrl: false
 prev: false
 next: false
