--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -11,13 +11,14 @@ hero:
       link: /introduccion/01-que-es-javascript/
       icon: right-arrow
       variant: primary
-    - text: Ver Github 
-      link: https://github.com/Broslunas/broslunas-aprendejs/
-      icon: github
     - text: Inicio 
       link: https://broslunas.com/
       icon: laptop
       variant: primary
+    - text: Ver Github 
+      link: https://github.com/Broslunas/broslunas-aprendejs/
+      icon: github
+      variant: secondary
 editUrl: false
 prev: false
 next: false
