--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -33,19 +33,15 @@ import { Tabs, TabItem } from '@astrojs/starlight/components';
     Arrancamos con JavaScript. Su definición, historia y características.
 	</Card>
   <Card title="Estructuras de control" icon="bars">
-    Controla el flujo de ejecución de tu programa con condicionales y bucles
+    Controla el flujo de ejecución de tu programa con condicionales y bucles.
+  </Card>
+  <Card title="Funciones" icon="laptop">
+    Crea bloques de código reutilizables y define parámetros para cambiar su comportamiento.
+  </Card>
+  <Card title="Arrays" icon="list-format">
+    Las estructuras de datos son la base de la programación, aprende a usarlas y a sacarles el máximo provecho.
+  </Card>
+  <Card title="Objetos" icon="bars">
+    Los objetos nos permiten agrupar datos y comportamientos y son perfectos para describir entidades del mundo real.
   </Card>
 </CardGrid>
-
-<Tabs>
-  <TabItem label="Introduccion" icon="open-book">
-    Arrancamos con JavaScript. Su definición, historia y características.
-
-    En esta seccion tendremos diferentes clases que nos introduciran al mundo de JavaScript.
-  </TabItem>
-  <TabItem label="Estructuras de control" icon="bars">
-    Controla el flujo de ejecución de tu programa con condicionales y bucles
-
-    En esta seccion aprenderás, como usar los condionales if, else y otros más. Adémas aprenderas a como utilizar los bucles mas sencillos entre otras cosas.
-  </TabItem>
-</Tabs>
